# long-horizon-memory-rl

./: README.md  plan.md  pyproject.toml  requirements.txt  setup.py
configs/: ablation_example.json  crafting_experiment.json
hcmrl/envs/: crafting.py  games.py  navigation.py  story.py
hcmrl/memory/: base.py  compression.py  immediate.py  long_term.py  short_term.py
hcmrl/models/: policy.py
hcmrl/rl/: exploration.py  ppo.py
hcmrl/validation/: analysis.py  experiments.py  metrics.py
scripts/: research_utils.py  run_ablation.py  run_experiment.py
tests/: conftest.py
tests/envs/: test_envs.py
tests/memory/: test_memory.py
tests/rl/: test_rl.py
tests/validation/: test_validation.py
