[build-system]
requires = [
    "setuptools>=64",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "hcmrl"
version = "0.1.0"
description = "Hierarchical Compressed Memory for Resource-Limited RL"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Ayush Singh" },
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "gym>=0.21.0",
    "wandb>=0.12.0",
    "pytest>=6.0.0",
    "tqdm>=4.62.0",
    "matplotlib>=3.4.0",
    "pandas>=1.3.0",
]

[tool.setuptools.packages.find]
include = ["hcmrl"]
